2009-05-17  Chris Fleizach  <cfleizach@apple.com>

Reviewed by Darin Adler.

        Bug 25769: Fix accessibility warnings on GTK
        https://bugs.webkit.org/show_bug.cgi?id=25769

        * page/AccessibilityTable.cpp:
        (WebCore::AccessibilityTable::columnCount): Get rid of excess const.
        (WebCore::AccessibilityTable::rowCount): Ditto.
        * page/AccessibilityTable.h: Ditto.



Canonical link: https://commits.webkit.org/35728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43810 268f45cc-cd09-0410-ab3c-d52691b4dbfc